dex/ship/base/deployment.yaml
---
# Source: dex/templates/deployment.yaml








apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.1.0
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.17.0"
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/component: dex
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: dex
      app.kubernetes.io/component: dex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dex
        app.kubernetes.io/instance: dex
        app.kubernetes.io/component: dex
      annotations:
        checksum/config: a8a257530d6e9af3a4c0431b6d7981b51f5c0e5f9f7907cf425f871cb41b2feb
    spec:
      serviceAccountName: dex
      nodeSelector:
          {}
          
      containers:
      - name: main
        image: "quay.io/dexidp/dex:v2.17.0"
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/cfg/config.yaml
        resources:
          {}
          
        ports:
        - name: http
          containerPort: 5556
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: config
        - mountPath: /etc/dex/tls/https/server
          name: https-tls
      volumes:
      - secret:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          secretName: dex
        name: config
      - name: https-tls
        secret:
          defaultMode: 420
          secretName: "dex-web-server-tls"
