dex/ship/base/ingress.yaml
---
# Source: dex/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.1.0
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.17.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  rules:
    - host: "dex.example.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: dex
              servicePort: 32000
